syntax = "proto3";

package dev.rmngrc.grpckolinstarter.proto;

option java_multiple_files = true;

service GrpcKotlinStarterService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply) {}
}

message HealthCheckRequest {}

message HealthCheckReply {
  string status = 1;
}